@@ -2996,6 +2996,14 @@ proc setup_xfail_format { format } {
     return $ret;
 }
 
+# Like setup_kfail, but only call setup_kfail conditionally if
+# istarget[TARGET] returns true.
+proc setup_kfail_for_target { PR target } {
+    if { [istarget $target] } {
+	setup_kfail $PR $target
+    }
+}
+
 proc gdb_step_for_stub { } {
     global gdb_prompt;
 
